<resources>
    <string name="app_name">BareNecessities</string>
    <string name="locationView">Select shop location</string>
    <string name="retailerName">Enter your name</string>
    <string name="shopName">Enter your shop\'s name</string>
    <string name="phoneNum">Enter your phone number</string>
    <string name="shopType">Select shop type</string>
    <string name="saveButton">Save</string>
    <string name="shopOpenTime">Select shop opening time</string>
    <string name="shopCloseTime">Select shop closing time</string>
    <string name="GSTnum">Enter shop GST number (if available)</string>
    <string name="email_1">Enter your email id</string>
    <string name="passwordCreate">Create a password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="itemAvailable">Were there any OTHER items unavailable other than those listed?</string>
    <string name="shopStatusTrue">Was the shop really open/closed as indicated?</string>
    <string name="giveFeedback">Give Feedback</string>
    <string name="statusOpen">This shop is currently open</string>
    <string name="statusClosed">This shop is currently closed</string>
    <string name="okButton">OK</string>
    <string name="loginForFeedback">Please login / sign up to give feedback</string>
    <string name="_00_00_hrs">00:00 hrs</string>
    <string name="update_shop_timings">Update Shop Timings</string>
    <string name="UpdationPg_Text_Back"><![CDATA[<-]]></string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="ShopStatus_open">Open</string>
    <string name="ShopStatus_closed">Closed</string>
    <string name="Text_CloseTime">Close</string>
    <string name="shop_status">Shop Status</string>
    <string name="available_items">Available Items</string>
    <string name="enter_items_at_your_store">Enter Items at your store</string>
    <string name="OPEN">OPEN</string>
    <string name="CLOSED">CLOSED</string>
    <string name="please_check_item_list_for_essentials_before_entering_items">Please check Item List for essentials before entering items</string>
    <string name="item_list">Item List</string>
    <string name="OK">OK</string>
    <string name="Essentials">Essentials</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
</resources>
