<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerAccount">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="624dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="1.0">


        <ImageButton
            android:id="@+id/imageCustomerAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="159dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:ems="10"
            android:hint="@string/retailerName"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="310dp" />

        <EditText
            android:id="@+id/emailCustomerAcc"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_margin="15dp"
            android:ems="10"
            android:hint="@string/email_1"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="310dp" />

        <EditText
            android:id="@+id/passwordCustomerAcc"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_margin="15dp"
            android:ems="10"
            android:hint="@string/passwordCreate"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="310dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_margin="15dp"
            android:ems="10"
            android:hint="@string/phoneNum"
            android:inputType="phone"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="476dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/saveButtonCA"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/saveButton" />


        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>