<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerRegistration">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <ImageButton
                android:id="@+id/imageCustomerReg"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:src="@mipmap/customer_img_default_foreground" />

            <EditText
                android:id="@+id/nameCustomerReg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="15dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/retailerName"
                android:inputType="textPersonName"
                android:textColor="#5F5235"
                android:textColorHint="#CC5F5235"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="310dp" />

            <EditText
                android:id="@+id/emailCustomerReg"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="@string/email_1"
                android:inputType="textEmailAddress"
                android:textColorHint="#CC5F5235"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="310dp" />

            <EditText
                android:id="@+id/passwordCustomerReg"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="@string/passwordCreate"
                android:inputType="textPassword"
                android:textColor="#5F5235"
                android:textColorHint="#CC5F5235"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="310dp" />

            <EditText
                android:id="@+id/mobileNumCustomerReg"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="15dp"
                android:ems="10"
                android:hint="@string/phoneNum"
                android:inputType="phone"
                android:textColor="#5F5235"
                android:textColorHint="#CC5F5235"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="476dp" />

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:text="enter all fields *"
                android:layout_margin="15dp"
                android:textColor="#F00"
                android:visibility="gone"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/saveButtonCR"
                    android:layout_width="138dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="#EFEE89"
                    android:text="@string/saveButton"
                    android:textColor="#5F5235"
                    android:textColorHint="#5F5235"
                    android:textStyle="bold" />


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>